<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/DodgerBlue"
            android:text="@string/account_name"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/loading_error"
            android:id="@+id/custom_list_account_name"
            android:textColor="@color/Black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/DodgerBlue"
            android:text="@string/account_balance"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/loading_error"
            android:id="@+id/custom_list_account_balance"
            android:textColor="@color/Black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/DodgerBlue"
            android:text="@string/account_type"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/loading_error"
            android:id="@+id/custom_list_account_type"
            android:textColor="@color/Black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/DodgerBlue"
            android:text="@string/account_paymentDate"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/loading_error"
            android:id="@+id/custom_list_account_paymentDate"
            android:textColor="@color/Black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/DodgerBlue"
            android:text="@string/account_billingDate"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/loading_error"
            android:id="@+id/custom_list_account_billingDate"
            android:textColor="@color/Black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/DodgerBlue"
            android:text="@string/account_paidFrom"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/loading_error"
            android:id="@+id/custom_list_account_paidFrom"
            android:textColor="@color/Black"/>
    </LinearLayout>
</LinearLayout>
